--- a/src/components/reportPage/upload.css
+++ b/src/components/reportPage/upload.css
@@ -25,7 +25,7 @@
 
 .remove-btn {
   position: absolute;
-  padding: 0.01rem 0.5rem 0.2rem;
+  padding: 0.1rem 0.5rem 0.2rem;
   top: 2px;
   right: 0.1rem;
   background-color: rgb(194, 10, 47);
@@ -78,8 +78,8 @@
 
 .file-column {
   position: relative;
-  transform: translateY(13%);
-  max-width: 20rem; /**  Max width for the coloumn  **/
+  transform: translateY(-13%);
+  max-width: 25rem; /**  Max width for the coloumn  **/
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -90,6 +90,7 @@
 }
 
 .button-column {
+  max-width: 2rem; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -102,4 +103,23 @@
   bottom: 0;
   right: 0.5rem;
   color: grey;
+}
+
+@media only screen and (max-width: 668px) {
+  /* For mobile phones: */
+  .file-column {
+    position: relative;
+    transform: translateY(-13%);
+    max-width: 15rem; /**  Max width for the column  **/
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .button-column {
+    max-width: 0.5rem; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
